# signal-rs

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yml  package.json
.github/workflows/: bump-version.yml  commitizen-check.yml  create-release.yml  test-and-lint.yml
frontend/: Taskfile.yml  nuxt.config.ts  package.json  vitest.config.ts
frontend/app/application/channel/: channel-service.ts
frontend/app/application/message/: message-service.ts
frontend/app/components/: AppSidebar.vue  MessageBubble.vue  MessageInput.vue  MessageList.vue  QrCodeView.vue
frontend/app/composables/: useBackendReady.ts
frontend/app/domains/channel/entities/: Channel.ts
frontend/app/domains/channel/repositories/: IChannelRepository.ts
frontend/app/domains/channel/schemas/: channel.schema.ts
frontend/app/domains/channel/schemas/__tests__/: channel.schema.spec.ts
frontend/app/domains/channel/use-cases/: GetChannels.ts
frontend/app/domains/channel/use-cases/__tests__/: get-channels.spec.ts
frontend/app/domains/message/entities/: Message.ts
frontend/app/domains/message/repositories/: IMessageRepository.ts
frontend/app/domains/message/schemas/: message.schema.ts
frontend/app/domains/message/schemas/__tests__/: message.schema.spec.ts
frontend/app/domains/message/use-cases/: SendMessage.ts
frontend/app/infrastructure/channel/: tauri-channel-repository.ts
frontend/app/infrastructure/message/: tauri-message-repository.ts
frontend/app/pages/: index.vue  onboarding.vue
src-tauri/: Cargo.toml  Taskfile.yml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: channels.rs  messages.rs  mod.rs  pairing.rs
src-tauri/src/models/: mod.rs
src-tauri/src/signal/: manager.rs
src-tauri/tests/: integration.rs
(+1 files in other folders)
