[package]
name = "signal-rs"
version = "0.3.0"
description = "Signal desktop client built with Tauri and presage"
authors = ["Delgehier Cédric"]
edition = "2021"

[lib]
name = "signal_rs_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-notification = "2"

# Signal protocol
presage = { git = "https://github.com/whisperfish/presage", rev = "600c4ede" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", rev = "600c4ede" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# QR code generation
qrcode = "0.14"
image = { version = "0.25", features = ["png"] }
base64 = "0.22"

# UUID
uuid = { version = "1", features = ["v4"] }

# Hex encoding (for group master keys)
hex = "0.4"

# Platform directories
dirs = "5"

# Error handling
anyhow = "1"

# URL handling
url = "2"

# Async utilities (required by presage)
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
# Same patches as gurk-rs (required by presage + presage-store-sqlite)
sqlx = { version = "0.8.6", git = "https://github.com/gferon/sqlx", rev = "53c3a26c1b484175f3beb21853a1061b488bf7af" }
libsqlite3-sys = { version = "0.36.0", git = "https://github.com/boxdot/rusqlite", rev = "d4523ff6cdb6472db55789ae92d518989ee8bfd6" }
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
